fix(Switch): Remove `gap` when there is no children (#986)

--- a/packages/react/src/components/form/Switch/Switch.module.css
+++ b/packages/react/src/components/form/Switch/Switch.module.css
@@ -16,6 +16,10 @@
   grid-auto-flow: column;
 }
 
+.switch.noLabel {
+  gap: 0;
+}
+
 @media (prefers-reduced-motion) {
   .container {
     --fds-transition: 0;
